--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -496,6 +496,12 @@ video {
 .mt-auto {
   margin-top: auto;
 }
+.mt-2 {
+  margin-top: 0.5rem;
+}
+.ml-auto {
+  margin-left: auto;
+}
 .grid {
   display: grid;
 }
@@ -503,11 +509,29 @@ video {
   width: -moz-max-content;
   width: max-content;
 }
+.w-full {
+  width: 100%;
+}
+.w-10 {
+  width: 2.5rem;
+}
+.w-20 {
+  width: 5rem;
+}
 .grid-flow-row {
   grid-auto-flow: row;
 }
 .grid-flow-col {
   grid-auto-flow: column;
+}
+.grid-cols-\[max-content_auto_max-content\] {
+  grid-template-columns: max-content auto max-content;
+}
+.grid-cols-\[max-content_max-content\] {
+  grid-template-columns: max-content max-content;
+}
+.grid-cols-\[1fr_auto_1fr\] {
+  grid-template-columns: 1fr auto 1fr;
 }
 .place-items-center {
   place-items: center;
@@ -515,9 +539,52 @@ video {
 .gap-1 {
   gap: 0.25rem;
 }
+.gap-2 {
+  gap: 0.5rem;
+}
+.rounded-md {
+  border-radius: 0.375rem;
+}
+.border-2 {
+  border-width: 2px;
+}
+.border-\[1px\] {
+  border-width: 1px;
+}
+.border-blue-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+.border-zinc-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(113 113 122 / var(--tw-border-opacity));
+}
+.border-r-violet-200 {
+  --tw-border-opacity: 1;
+  border-right-color: rgb(221 214 254 / var(--tw-border-opacity));
+}
 .bg-neutral-950 {
   --tw-bg-opacity: 1;
   background-color: rgb(10 10 10 / var(--tw-bg-opacity));
+}
+.p-2 {
+  padding: 0.5rem;
+}
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 .text-xl {
   font-size: 1.25rem;
@@ -553,4 +620,18 @@ video {
 .text-emerald-500 {
   --tw-text-opacity: 1;
   color: rgb(16 185 129 / var(--tw-text-opacity));
+}
+.odd\:bg-neutral-800:nth-child(odd) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(38 38 38 / var(--tw-bg-opacity));
+}
+.odd\:bg-neutral-900:nth-child(odd) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(23 23 23 / var(--tw-bg-opacity));
+}
+.odd\:bg-neutral-800\/20:nth-child(odd) {
+  background-color: rgb(38 38 38 / 0.2);
+}
+.odd\:bg-neutral-800\/0:nth-child(odd) {
+  background-color: rgb(38 38 38 / 0);
 }
