--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -518,6 +518,12 @@ video {
 .w-20 {
   width: 5rem;
 }
+.w-\[120px\] {
+  width: 120px;
+}
+.w-\[150px\] {
+  width: 150px;
+}
 .grid-flow-row {
   grid-auto-flow: row;
 }
@@ -550,6 +556,9 @@ video {
 }
 .border-\[1px\] {
   border-width: 1px;
+}
+.border-\[2px\] {
+  border-width: 2px;
 }
 .border-blue-500 {
   --tw-border-opacity: 1;
@@ -608,6 +617,18 @@ video {
 }
 .font-bold {
   font-weight: 700;
+}
+.font-semibold {
+  font-weight: 600;
+}
+.font-light {
+  font-weight: 300;
+}
+.font-medium {
+  font-weight: 500;
+}
+.font-extrabold {
+  font-weight: 800;
 }
 .text-white {
   --tw-text-opacity: 1;
