--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css2?family=Roboto&display=swap);
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 * {
   font-family: Roboto, sans-serif;
@@ -22,4 +22,9 @@
 
 .atom-forge-disabled:hover {
   background-color: #f43f5e40;
+}
+
+::selection {
+  background: #ffffff20;
+  color: #fff;
 }
