--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -493,36 +493,43 @@ video {
   margin-left: auto;
   margin-right: auto;
 }
-.mt-auto {
-  margin-top: auto;
+.ml-auto {
+  margin-left: auto;
 }
 .mt-2 {
   margin-top: 0.5rem;
 }
-.ml-auto {
-  margin-left: auto;
+.block {
+  display: block;
 }
 .grid {
   display: grid;
+}
+.hidden {
+  display: none;
+}
+.h-max {
+  height: -moz-max-content;
+  height: max-content;
+}
+.w-\[150px\] {
+  width: 150px;
+}
+.w-full {
+  width: 100%;
 }
 .w-max {
   width: -moz-max-content;
   width: max-content;
 }
-.w-full {
-  width: 100%;
+.w-\[80px\] {
+  width: 80px;
 }
-.w-10 {
-  width: 2.5rem;
-}
-.w-20 {
-  width: 5rem;
+.w-\[100px\] {
+  width: 100px;
 }
 .w-\[120px\] {
   width: 120px;
-}
-.w-\[150px\] {
-  width: 150px;
 }
 .grid-flow-row {
   grid-auto-flow: row;
@@ -530,14 +537,14 @@ video {
 .grid-flow-col {
   grid-auto-flow: column;
 }
-.grid-cols-\[max-content_auto_max-content\] {
-  grid-template-columns: max-content auto max-content;
+.grid-cols-\[1fr_auto_1fr\] {
+  grid-template-columns: 1fr auto 1fr;
 }
 .grid-cols-\[max-content_max-content\] {
   grid-template-columns: max-content max-content;
 }
-.grid-cols-\[1fr_auto_1fr\] {
-  grid-template-columns: 1fr auto 1fr;
+.grid-rows-\[1fr_1fr\] {
+  grid-template-rows: 1fr 1fr;
 }
 .place-items-center {
   place-items: center;
@@ -551,33 +558,23 @@ video {
 .rounded-md {
   border-radius: 0.375rem;
 }
-.border-2 {
-  border-width: 2px;
-}
-.border-\[1px\] {
-  border-width: 1px;
-}
 .border-\[2px\] {
   border-width: 2px;
 }
-.border-blue-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(59 130 246 / var(--tw-border-opacity));
-}
-.border-zinc-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(113 113 122 / var(--tw-border-opacity));
-}
-.border-r-violet-200 {
-  --tw-border-opacity: 1;
-  border-right-color: rgb(221 214 254 / var(--tw-border-opacity));
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
 .bg-neutral-950 {
   --tw-bg-opacity: 1;
   background-color: rgb(10 10 10 / var(--tw-bg-opacity));
 }
-.p-2 {
-  padding: 0.5rem;
+.p-1 {
+  padding: 0.25rem;
+}
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -587,76 +584,63 @@ video {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 .font-bold {
   font-weight: 700;
 }
-.font-semibold {
-  font-weight: 600;
+.uppercase {
+  text-transform: uppercase;
 }
-.font-light {
-  font-weight: 300;
-}
-.font-medium {
-  font-weight: 500;
-}
-.font-extrabold {
-  font-weight: 800;
-}
-.text-white {
+.text-black {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-green-50 {
-  --tw-text-opacity: 1;
-  color: rgb(240 253 244 / var(--tw-text-opacity));
-}
-.text-emerald-500 {
-  --tw-text-opacity: 1;
-  color: rgb(16 185 129 / var(--tw-text-opacity));
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
-.odd\:bg-neutral-800:nth-child(odd) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(38 38 38 / var(--tw-bg-opacity));
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .odd\:bg-neutral-900:nth-child(odd) {
   --tw-bg-opacity: 1;
   background-color: rgb(23 23 23 / var(--tw-bg-opacity));
 }
-.odd\:bg-neutral-800\/20:nth-child(odd) {
-  background-color: rgb(38 38 38 / 0.2);
-}
-.odd\:bg-neutral-800\/0:nth-child(odd) {
-  background-color: rgb(38 38 38 / 0);
+@media (min-width: 768px) {
+
+  .md\:block {
+    display: block;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:w-\[150px\] {
+    width: 150px;
+  }
+
+  .md\:grid-cols-\[1fr_auto_1fr\] {
+    grid-template-columns: 1fr auto 1fr;
+  }
+
+  .md\:grid-rows-1 {
+    grid-template-rows: repeat(1, minmax(0, 1fr));
+  }
 }
