--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -534,6 +534,9 @@ video {
 .grid-cols-\[max-content_max-content\] {
   grid-template-columns: max-content max-content;
 }
+.grid-cols-\[max-content_auto\] {
+  grid-template-columns: max-content auto;
+}
 .grid-rows-\[1fr_1fr\] {
   grid-template-rows: 1fr 1fr;
 }
@@ -562,6 +565,9 @@ video {
 }
 .p-1 {
   padding: 0.25rem;
+}
+.p-2 {
+  padding: 0.5rem;
 }
 .px-1 {
   padding-left: 0.25rem;
@@ -607,7 +613,15 @@ video {
     display: block;
   }
 
+  .md\:grid {
+    display: grid;
+  }
+
   .md\:hidden {
     display: none;
+  }
+
+  .md\:grid-cols-\[1fr_auto_1fr\] {
+    grid-template-columns: 1fr auto 1fr;
   }
 }
