--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -489,6 +489,21 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.absolute {
+  position: absolute;
+}
+.left-0 {
+  left: 0px;
+}
+.top-0 {
+  top: 0px;
+}
+.z-\[20\] {
+  z-index: 20;
+}
+.z-\[10\] {
+  z-index: 10;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -512,6 +527,9 @@ video {
   height: -moz-max-content;
   height: max-content;
 }
+.h-screen {
+  height: 100vh;
+}
 .w-\[150px\] {
   width: 150px;
 }
@@ -521,6 +539,15 @@ video {
 .w-max {
   width: -moz-max-content;
   width: max-content;
+}
+.w-\[80\%\] {
+  width: 80%;
+}
+.w-screen {
+  width: 100vw;
+}
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .grid-flow-row {
   grid-auto-flow: row;
@@ -597,9 +624,26 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
 .odd\:bg-neutral-900:nth-child(odd) {
   --tw-bg-opacity: 1;
   background-color: rgb(23 23 23 / var(--tw-bg-opacity));
+}
+@media (min-width: 640px) {
+
+  .sm\:w-\[200px\] {
+    width: 200px;
+  }
+
+  .sm\:w-\[300px\] {
+    width: 300px;
+  }
 }
 @media (min-width: 768px) {
 
