--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -4,6 +4,25 @@
   font-family: Roboto, sans-serif;
 }
 
+::selection {
+  background: #ffffff20;
+  color: #fff;
+}
+
+.toast-entry {
+  transform: translateY(-100%);
+  transition: transform 100ms ease-in;
+}
+
+.toast-entered {
+  transform: translateY(0);
+}
+
+.toast-exit {
+  transform: translateY(-100%);
+  transition: transform 100ms ease-out;
+}
+
 .atom-forge-enabled {
   border-color: #10b981;
   cursor: pointer;
@@ -22,9 +41,4 @@
 
 .atom-forge-disabled:hover {
   background-color: #f43f5e40;
-}
-
-::selection {
-  background: #ffffff20;
-  color: #fff;
 }
