--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -601,6 +601,27 @@ video {
 .border-\[2px\] {
   border-width: 2px;
 }
+.border-r-2 {
+  border-right-width: 2px;
+}
+.border-r-\[1px\] {
+  border-right-width: 1px;
+}
+.border-r-\[2px\] {
+  border-right-width: 2px;
+}
+.border-border {
+  --tw-border-opacity: 1;
+  border-color: rgb(37 37 37 / var(--tw-border-opacity));
+}
+.border-r-zinc-500 {
+  --tw-border-opacity: 1;
+  border-right-color: rgb(113 113 122 / var(--tw-border-opacity));
+}
+.border-r-border {
+  --tw-border-opacity: 1;
+  border-right-color: rgb(37 37 37 / var(--tw-border-opacity));
+}
 .bg-black\/50 {
   background-color: rgb(0 0 0 / 0.5);
 }
@@ -625,6 +646,9 @@ video {
 }
 .p-2 {
   padding: 0.5rem;
+}
+.p-4 {
+  padding: 1rem;
 }
 .px-1 {
   padding-left: 0.25rem;
@@ -677,6 +701,12 @@ video {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+.duration-300 {
+  transition-duration: 300ms;
+}
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .odd\:bg-neutral-900:nth-child(odd) {
   --tw-bg-opacity: 1;
