--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -9,6 +9,11 @@
   color: #fff;
 }
 
+.page {
+  padding-top: 4rem;
+  padding-bottom: 100rem;
+}
+
 .toast-entry {
   transform: translateY(-100%);
   transition: transform 100ms ease-in;
