--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -526,6 +526,12 @@ video {
 .mt-2 {
   margin-top: 0.5rem;
 }
+.mt-0 {
+  margin-top: 0px;
+}
+.\!mt-0 {
+  margin-top: 0px !important;
+}
 .block {
   display: block;
 }
@@ -583,6 +589,9 @@ video {
 .grid-cols-\[max-content_max-content\] {
   grid-template-columns: max-content max-content;
 }
+.grid-cols-\[1fr_auto_1fr\] {
+  grid-template-columns: 1fr auto 1fr;
+}
 .grid-rows-\[1fr_1fr\] {
   grid-template-rows: 1fr 1fr;
 }
@@ -601,26 +610,15 @@ video {
 .border-\[2px\] {
   border-width: 2px;
 }
-.border-r-2 {
-  border-right-width: 2px;
-}
 .border-r-\[1px\] {
   border-right-width: 1px;
 }
-.border-r-\[2px\] {
-  border-right-width: 2px;
+.border-b-\[1px\] {
+  border-bottom-width: 1px;
 }
 .border-border {
   --tw-border-opacity: 1;
   border-color: rgb(37 37 37 / var(--tw-border-opacity));
-}
-.border-r-zinc-500 {
-  --tw-border-opacity: 1;
-  border-right-color: rgb(113 113 122 / var(--tw-border-opacity));
-}
-.border-r-border {
-  --tw-border-opacity: 1;
-  border-right-color: rgb(37 37 37 / var(--tw-border-opacity));
 }
 .bg-black\/50 {
   background-color: rgb(0 0 0 / 0.5);
@@ -640,6 +638,9 @@ video {
 .bg-neutral-950 {
   --tw-bg-opacity: 1;
   background-color: rgb(10 10 10 / var(--tw-bg-opacity));
+}
+.bg-glass {
+  background-color: #04060a60;
 }
 .p-1 {
   padding: 0.25rem;
@@ -665,9 +666,9 @@ video {
   font-size: 1.5rem;
   line-height: 2rem;
 }
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 .text-xl {
   font-size: 1.25rem;
@@ -694,6 +695,15 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.blur {
+  --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+.backdrop-blur {
+  --tw-backdrop-blur: blur(8px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
