--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -1,7 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
+html,
+body {
+  scroll-behavior: smooth;
+}
+
 * {
   font-family: Roboto, sans-serif;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #00000000;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background: darkgray;
 }
 
 ::selection {
