--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -492,9 +492,6 @@ video {
 .fixed {
   position: fixed;
 }
-.absolute {
-  position: absolute;
-}
 .left-0 {
   left: 0px;
 }
@@ -535,6 +532,12 @@ video {
 .hidden {
   display: none;
 }
+.h-4 {
+  height: 1rem;
+}
+.h-8 {
+  height: 2rem;
+}
 .h-\[1px\] {
   height: 1px;
 }
@@ -547,6 +550,12 @@ video {
 }
 .w-0 {
   width: 0px;
+}
+.w-4 {
+  width: 1rem;
+}
+.w-8 {
+  width: 2rem;
 }
 .w-\[150px\] {
   width: 150px;
@@ -588,6 +597,9 @@ video {
 }
 .grid-cols-\[max-content_auto\] {
   grid-template-columns: max-content auto;
+}
+.grid-cols-\[max-content_auto_max-content\] {
+  grid-template-columns: max-content auto max-content;
 }
 .grid-cols-\[max-content_max-content\] {
   grid-template-columns: max-content max-content;
@@ -667,6 +679,9 @@ video {
   font-size: 1.5rem;
   line-height: 2rem;
 }
+.text-2xs {
+  font-size: 10px;
+}
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
@@ -682,6 +697,9 @@ video {
 .font-bold {
   font-weight: 700;
 }
+.font-semibold {
+  font-weight: 600;
+}
 .uppercase {
   text-transform: uppercase;
 }
@@ -696,11 +714,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.backdrop-blur {
-  --tw-backdrop-blur: blur(8px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 .backdrop-blur-lg {
   --tw-backdrop-blur: blur(16px);
@@ -719,6 +732,9 @@ video {
 }
 .duration-300 {
   transition-duration: 300ms;
+}
+.duration-500 {
+  transition-duration: 500ms;
 }
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -739,6 +755,16 @@ video {
 
   .sm\:w-\[300px\] {
     width: 300px;
+  }
+
+  .sm\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .sm\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
 @media (min-width: 768px) {
